# ungoogled-chromium-build

./: .gitignore  README.md  build.sh  docker-build.sh  flags.gn
builder/: Dockerfile
debian/: build.sh
docker/: Dockerfile
package/: package.sh  prepare-publish.sh  ungoogled-chromium.yml
patches/: node.patch  rust-version-check.patch  series
portable/: build.sh  package.sh  prepare-publish.sh
