blink_enable_generated_code_formatting=false
blink_symbol_level=0
clang_base_path="/usr"
custom_toolchain="//build/toolchain/linux/unbundle:default"
disable_fieldtrial_testing_config=true
enable_hevc_parser_and_hw_decoder=true
enable_iterator_debugging=false
enable_platform_hevc=true
enable_widevine=true
fatal_linker_warnings=false
ffmpeg_branding="Chrome"
host_toolchain="//build/toolchain/linux/unbundle:default"
is_clang=true
is_debug=false
is_official_build=true
link_pulseaudio=true
proprietary_codecs=true
rtc_use_pipewire=true
symbol_level=0
use_custom_libcxx=false
use_gnome_keyring=false
use_kerberos=false
use_sysroot=false
use_system_libffi=true
use_vaapi=true

